manejo de íconos e imágenes en etiquetas

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <ul class="nav-right-section">
                 <li><a href="#">Correo</a></li>
                 <li><a href="#">Imágenes</a></li>
-                <li><a href="#">Icon</a></li>
-                <li><a href="#">Photo</a></li>
+                <li class="menu-icon" ><a href="#"></a></li>
+                <li><a href="#"><img src="https://lh3.googleusercontent.com/ogw/ADea4I7pyeGX-uDa_mteTH4ZO3P45N3NmqbSvVTaElvAeA=s32-c-mo" alt="imagen usuario"></a></li>
             </ul>
         </nav>
     </header>    
