--- a/index.html
+++ b/index.html
@@ -17,6 +17,29 @@
                 <li><a href="#"><img src="https://lh3.googleusercontent.com/ogw/ADea4I7pyeGX-uDa_mteTH4ZO3P45N3NmqbSvVTaElvAeA=s32-c-mo" alt="imagen usuario"></a></li>
             </ul>
         </nav>
-    </header>    
+    </header>
+    <main>
+        <section class="main-logo" >
+            <img src="" alt="">
+        </section>
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="search-icon">
+
+                </span>
+                <input type="text">
+                <a class="micro-icon" href=""></a>
+            </div>
+        </section>
+        <section class="main-buttons">
+            <div>
+                <button>Buscar con Google</button>
+            </div>
+            <div>
+                <button>Me siento con suerte</button>
+            </div>
+
+        </section>
+    </main>
 </body>
 </html>
