--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <section class="main-logo" >
-            <img src="" alt="">
+            <img src="https://www.google.com.ar/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
         </section>
         <section class="main-input">
             <div class="main-input-container">
@@ -38,7 +38,6 @@
             <div>
                 <button>Me siento con suerte</button>
             </div>
-
         </section>
     </main>
 </body>
