--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span class="search-icon">
                 </span>
                 <input type="text">
-                <a class="micro-icon" href=""></a>
+                <a class="micro-icon" href="#"></a>
             </div>
         </section>
         <section class="main-buttons">
@@ -39,5 +39,32 @@
             </div>
         </section>
     </main>
+    <footer>
+        <ul class="footer-left">
+            <li>
+                <a href="#">Publicidad</a>
+            </li>
+            <li>
+                <a href="#">Negocios</a>
+            </li>
+            <li>
+                <a href="#">Acerca de</a>
+            </li>
+            <li>
+                <a href="#">Cómo funciona la búsqueda</a>
+            </li>
+        </ul>        
+        <ul class="footer-right">
+            <li>
+                <a href="#">Privacidad</a>
+            </li>
+            <li>
+                <a href="#">Condiciones</a>
+            </li>
+            <li>
+                <a href="#">Preferencias</a></li>       
+                     
+        </ul>        
+    </footer>
 </body>
 </html>
